syntax = "proto3";

package photo.v1;

import "google/protobuf/timestamp.proto";

option go_package = "photo/proto/photo/v1";


service PhotoService {
  rpc CreatePhoto(CreatePhotoRequest) returns (CreatePhotoResponse);
  rpc ListPhotos(ListPhotosRequest) returns (ListPhotosResponse);
}
message Photo{
  string id = 1;
  string type = 2;
  int32 size_kb = 3;
  string upload_name = 4;
  string description = 5;
  string owner_id = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  bool deleted = 9;
};

message CreatePhotoRequest{
  string type = 1;
  int32 size_kb = 2;
  string upload_name = 3;
  string description = 4;
};

message CreatePhotoResponse{
  bool created = 1;
  Photo photo = 2;
}

message ListPhotosRequest{
  string id = 1;
  uint32 page_size = 2;
  string page_token = 3;
  bool reverse = 4;
};

message ListPhotosResponse {
  repeated Photo photos = 1;
  string next_page_token = 2;
}
