syntax = "proto3";

package proto.ticket.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

option go_package = "proto/ticket/v1";

enum OrderBy {
  DESC = 0;
  ASC = 1;
}
message NullableTimestamp {
  oneof Kind {
    google.protobuf.NullValue Null = 1;
    google.protobuf.Timestamp Value = 2;
  }
}
// Ticket
message Ticket {
  string id = 1;
  string owner_id = 2;
  string name_short = 3;
  string name_ext = 4;
  string description = 5;
  int32 amount = 6;
  double price = 7;
  int32 currency = 8;
  bool active = 9;
  string advantage = 10;
  NullableTimestamp published_at = 11;
  NullableTimestamp created_at = 12;
  NullableTimestamp updated_at = 13;
  NullableTimestamp deleted_at = 14;
}

message CreateTicketRequest {
  Ticket ticket = 1;
}

message CreateTicketResponse{
  string id = 1;
}

message GetTicketRequest{
  string id = 1;
}

message GetTicketResponse{
  Ticket ticket = 1;
}

message UpdateTicketRequest{
  Ticket ticket = 1;
}

message DeleteTicketRequest{
  string id = 1;
}

message DeleteTicketResponse{}

// SERVICE
service TicketService {
  rpc CreateTicket (CreateTicketRequest) returns (CreateTicketResponse);
  rpc GetTicket (GetTicketRequest) returns (GetTicketResponse);
  rpc UpdateTicket (UpdateTicketRequest) returns (GetTicketResponse);
  rpc DeleteTicket (DeleteTicketRequest) returns (DeleteTicketResponse);
}
